# ctbc-qa-bot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: __init__.py  build_faiss_index.py  download_datasets.py  extract_faq.py
src/: __init__.py
src/app/: __init__.py  cli_chat.py  config.py
src/chains/: __init__.py  chatbot.py
src/llm/: __init__.py  loader.py
src/rag/: __init__.py  index_builder.py  retriever.py
training/: __init__.py  data_processor.py  finetune_lora.py
training/configs/: lora_config.yaml
